<resources>
    <string name="app_name">PAC_UF2_FragaAdrian</string>
    <string name="main_text">Bienvenid@ a mi primera app</string>
    <string name="logging_buttom">IDENTIFÍCATE!</string>
    <string name="register_buttom">REGÍSTRATE!</string>
    <string name="register_text">Pantalla de registro!</string>
    <string name="login_text">Pantalla de inicio de sesion, Identifícate!</string>
    <string name="register_toast">Hiciste click en registrate!</string>
    <string name="name_user">Nombre</string>
    <string name="lastName_user">Apellido</string>
    <string name="user_name">Nombre usuario</string>
    <string name="password_user">Contraseña</string>
    <string name="email_user">Correo electrónico</string>
    <string name="registrameYa_buttom">Regístrame ya!</string>
    <string name="loging_toast">Hiciste click en identifícate!</string>
    <string name="nombre_toast">Debes de introducir un nombre!</string>
    <string name="apellido_toast">Debes de introducir un apellido!</string>
    <string name="userName_toast">Debes de introducir un nombre de usuario!</string>
    <string name="contraseña_toast">Debes de introducir una contraseña!</string>
    <string name="email_toast">Debes de introducir una dirección de email!</string>
    <string name="accede_buttom">Accede!</string>
    <string name="music_text">Escucha Adri FC - Evening beats (demo) dZb Records</string>
    <string name="play_buttom">PLAY!</string>
    <string name="stop_buttom">STOP</string>
    <string name="inicioCorrecto_toast">Inicio de sesion correcto!</string>
    <string name="datosIncorrectos_toast">Usuario o contraseña incorrectos!</string>
    <string name="emailValido_toast">Introduce un email válido!</string>
    <string name="bienvenida_toast">Bienvenido,</string>

</resources>
